@@ -7,19 +7,11 @@
         <viewlet name="plone.comments" />
   </hidden>
 
-  <order manager="plone.belowcontenttitle" skinname="iZug Theme">
-        <viewlet name="ftw.blog.actionsbar" insert-after="*" />
-  </order>
-  
   <hidden manager="plone.belowcontenttitle" skinname="ZugSkin">
         <viewlet name="plone.belowcontenttitle.documentbyline" />
   </hidden>
   <hidden manager="plone.belowcontent" skinname="ZugSkin">
         <viewlet name="plone.comments" />
   </hidden>
-
-  <order manager="plone.belowcontenttitle" skinname="ZugSkin">
-        <viewlet name="ftw.blog.actionsbar" insert-after="*" />
-  </order>  
 
 </object>
